# heal

./: .gitignore  CMakeLists.txt  LICENSE  README.md  flake.nix
.github/workflows/: build.yml
examples/: CMakeLists.txt  benchmark.cc  stats.h
include/heal/: common.h  heal.h  vector.h
include/heal/backend/: seal.h
scripts/: benchmark-to-csv.py
src/: heal.c  seal.cpp  seal.h
src/backend/seal/: CMakeLists.txt  bfv.cc  ckks.cc  seal.cc
